# dash_charts

./: .archan.yaml  .copier-answers.yml  .deepsource.toml  .flake8  .gitchangelog.rc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .pyup.yml  .sourcery.yaml  02-Dash-Layout.py  0201-Dash-Core-Components.py  020202-Dash-Sortable-DataTable.py  020203-Dash-Backend-Datatable.py  0203-Dash-Tabs.py  404.html  CHANGELOG-raw.md  CHANGELOG.md  DASH_TASKS.txt  DESIGN.md  LICENSE  README.md  TODO.md  TODO_LIST.txt  _try_tabulator.py  appveyor.yml  dash_charts-examples.puml  dash_charts.puml  distortion_chart.py  dodo.py  dodoBase.py  index.html  main.py  mkdocs.yml  mypy.ini  noxfile.py  pareto_chart.py  patterns.py  pyproject.toml  (+2 more)
.dash_tutorials/: 02-dash-core-components.py  03-dash-core-components_tabs.py  04-datatable.py  05-datatable_interactivity.py  06-datatable_filtering.py  07_daq-dark-theme.py  08_px-charts.py  SanFran_Weather_TS-Filter.py  demo-px-charts.py  demo_plotly_express-tabbed.py  demo_plotly_express.py
.dash_tutorials/sqlite-demo/: sqlite_demo_backend.py  sqlite_demo_ui.py
.diagrams/: dash_charts.puml  py2puml.ini
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: labels.yml
CODE_TAG_SUMMARY/: index.html
DESIGN/: index.html
_adr/: README.md
_dash_tutorials/: 01-getting-started.py  02-dash-core-components.py  04-datatable.py  05-datatable_interactivity.py  06-datatable_filtering.py  07_daq-dark-theme.py  08_plotly_express-tabbed.py  08_plotly_express.py  README.md  SanFran_Weather_TS-Filter.py  _config.py  demo_daq-dark-theme.py  demo_plotly_express-tabbed.py
_dash_tutorials/sqlite-demo/: sqlite_demo_ui.py
_javascript/: tables.js
adr/: index.html
adr/NNN-Template/: index.html
assets/: styles.css  usa-agricultural-exports-2011.csv
dash_charts/: __init__.py  alignment_chart.py  appUtils.py  app_px.py  components.py  coordinate_chart.py  custom_colorscales.py  dash_helpers.py  datatable.py  distortion_chart.py  equations.py  fitted_chart.py  gantt.py  gantt_chart.py  grouped_bar.py  helpers.py  modules.py  modules_datatable.py  modules_upload.py  pareto_chart.py  rolling_chart.py  scatter_line_charts.py  time_vis.py  time_vis_chart.py  utils_app.py  utils_app_modules.py  utils_app_with_navigation.py  utils_cache.py  utils_callbacks.py  utils_dash.py  utils_data.py  utils_dataset.py  utils_dodo.py  utils_fig.py  utils_helpers.py  utils_json_cache.py  utils_static.py  utils_static_toc.py
dash_charts/assets/: 09_user-styles.css  README.txt
docs/: CNAME  CODE_TAG_SUMMARY.md  DESIGN.md  DEVELOPER_GUIDE.md  README.md  config.mako  head.mako
docs/CHANGELOG/: index.html
docs/CODE_OF_CONDUCT/: index.html
docs/CODE_TAG_SUMMARY/: index.html
docs/CONTRIBUTING/: index.html
docs/DEVELOPER_GUIDE/: index.html
docs/SECURITY/: index.html
docs/STYLE_GUIDE/: index.html
docs/dash_charts/: app_px.html  components.html  coordinate_chart.html  custom_colorscales.html  dash_helpers.html  datatable.html  equations.html  gantt_chart.html  index.html  modules_datatable.html  modules_upload.html  pareto_chart.html  scatter_line_charts.html  time_vis_chart.html  utils_app.html  utils_app_modules.html  utils_app_with_navigation.html  utils_callbacks.html  utils_dash.html  utils_data.html  utils_dataset.html  utils_fig.html  utils_helpers.html  utils_json_cache.html  utils_static.html
docs/docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_TAG_SUMMARY.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  SECURITY.md  STYLE_GUIDE.md
examples/: 0201_Dash_Core_Components.py  020201_Dash_DataTable.py  020202_Dash_Interactive_DataTable.py  020203_Dash_Backend_Datatable.py  02_Dash_Layout.py  08_px-charts.py  DowntimeData.csv  Example.py  alignment_chart.py  ex_Bulma-styling.py  ex_Bulma_styling.py  ex_alignment_chart.py  ex_app.py  ex_coordinate_chart.py  ex_fitted_chart.py  ex_multi_page.py  ex_pareto_chart.py  ex_px.py  ex_rolling_chart.py  ex_style_bootstrap.py  ex_style_bulma.py  ex_tabs.py  pareto_chart.py  sqlite_demo_backend.py  sqlite_demo_ui.py
examples/assets/: 09_user-styles.css  _CDN_Links.txt  styles.css
modules/dash_charts/: index.html
pages/: 0201_Dash_Core_Components.py  020201-Dash-DataTable.py  020202-Dash-Interactive-DataTable.py  020202-Dash-Sortable-DataTable.py  020203-Dash-Backend-Datatable.py  0203-Dash-Tabs.py  0203_Dash_Tabs.py  02_Dash_Layout.py  sqlite-demo-backend.py  sqlite-demo-ui.py  sqlite_demo_ui.py
pages/assets/: _external_scripts.txt  codepen.io-chriddyp-pen-bWLwgP.css
pages/modules/: distortion_chart.py  pareto_chart.py
scripts/: README.md  check_imports.py  jsonl_viewer.py  plot_stale_dependencies.py
search/: search_index.json
styles/: blue-bg.css
tests/: __init__.py  configuration.py  conftest.py  test_custom_colorscales.py  test_dash_charts_equations.py  test_dash_helpers.py  test_example_snippets.py  test_examples_ex_coordinate_chart.py  test_examples_ex_datatable.py  test_examples_ex_fitted_chart.py  test_examples_ex_gantt.py  test_examples_ex_gantt_chart.py  test_examples_ex_marginal_chart.py  test_examples_ex_modules_upload.py  test_examples_ex_multi_page.py  test_examples_ex_pareto_chart.py  test_examples_ex_px.py  test_examples_ex_rolling_chart.py  test_examples_ex_sqlite_realtime.py  test_examples_ex_style_bootstrap.py  test_examples_ex_style_bulma.py  test_examples_ex_tabs.py  test_examples_ex_time_vis_chart.py  test_examples_ex_utils_static.py  test_examples_utils_static.py  test_pareto_chart.py  test_utils_cache.py  test_utils_data.py  test_utils_dataset.py  test_utils_fig.py  test_utils_helpers.py  test_utils_json_cache.py  test_utils_static_toc.py  test_zz_dash_charts.py
tests/data/: README.md  README.txt  test_utils_static_toc-expected.html
tests/examples/: 08_px-charts.py  ex_app_px.py  ex_coordinate_chart.py  ex_datatable.py  ex_fitted_chart.py  ex_gantt.py  ex_gantt_chart.py  ex_gantt_data.csv  ex_marginal_chart.py  ex_multi_page.py  (+13 more)
wip/: basketball.py  basketball_plots_tor_shotchart.html
(+44 files in other folders)
