[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "dash_charts"
length_sort = false
line_length = 120
multi_line_output = 5

[tool.commitizen]
name = "cz_legacy"
change_type_order = [
    "BREAKING CHANGE",
    "Feat",
    "Fix",
    "Refactor",
    "Perf",
    "New (Old)",
    "Change (Old)",
    "Fix (Old)",
]
version = "0.1.0a0"
tag_format = "2021.$version"
version_files = ["pyproject.toml", "dash_charts/__init__.py", "appveyor.yml"]

[tool.commitizen.cz_legacy_map]
Chg = "Change (Old)"
Fix = "Fix (Old)"
New = "New (Old)"

[tool.poetry]
name = "dash_charts"
version = "2021.0.1.0a0"
description = "Python package for Plotly/Dash apps with support for multi-page, modules, and new charts such as Pareto with an Object Orient Approach"
license = "MIT"
authors = ["Kyle King <dev.act.kyle@gmail.com>"]
maintainers = []
repository = "https://github.com/kyleking/dash_charts"
documentation = "https://github.com/kyleking/dash_charts/docs"
readme = "docs/README.md"
include = ["LICENSE.md"]
keywords = ["plotly-dash", "plotly-python"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Dash",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
] # https://pypi.org/classifiers/
# And based on: https://github.com/plotly/dash/blob/dev/setup.py#L43

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kyleking/dash_charts/issues"

[tool.poetry.dependencies]
python = "^3.8"
cerberus = "*"
dash = "*"
dash-bootstrap-components = "*"
dataset = "*"
dominate = "*"
implements = "*"
lxml = "*"
markdown = "*"
Palettable = "*"
pandas = "*"
psutil = "*"
python-box = "*"
scipy = "*"

# sqlite-utils = "*"
# datasette-vega = "*"
# great-expectations = "*"

# FIXME: In-progress testing of a better dash table
dash-tabulator = "^0.4.2"
dash-extensions = "^0.0.55"

[tool.poetry.dependencies.calcipy]
git = "https://github.com/kyleking/calcipy.git"
branch = "dev/development"
rev = "01635ea"                                 # Always pin to a commit
develop = true                                  # Optional: will reinstall each time

[tool.poetry.dev-dependencies.calcipy]
git = "https://github.com/kyleking/calcipy.git"
branch = "dev/development"
extras = ["dev", "lint", "test", "commitizen_legacy"]

[tool.poetry.dev-dependencies]
astor = "*"
jsonpickle = "*"

# Experimental dependencies
archan = { git = "https://github.com/pawamoy/archan.git" }
dependenpy = "^3.3.0"
archan-pylint = { git = "https://github.com/pawamoy/archan-pylint" }

[tool.poetry.dev-dependencies.dash]
extras = ["testing"]
version = "^1.16"

[tool.poetry.extras]
matplotlib = ["matplotlib"]
